@@ -1,0 +1,33 @@
+<?php
+/**
+ *    Theme Name: Bluesome Theme
+ *    Author:     Saku Lehtiö
+ *    Date:       April 22, 2005
+ *
+ * Copyright (c) 2005 Saku Lehtiö
+ * Published on SquirrelMail SourceForge tracker (#1188209).
+ * Modified by SquirrelMail developers to match documentation guidelines.
+ * Copyright (c) 2005 The SquirrelMail Project Team
+ * Licensed under the GNU GPL. For full terms see the file COPYING.
+ * @package squirrelmail
+ * @subpackage themes
+ */
+
+global $color;
+$color[0]   = '#9DB5CB';
+$color[1]   = '#800000';
+$color[2]   = '#CC0000';
+$color[3]   = '#5B6177';
+$color[4]   = '#CBD2D9';
+$color[5]   = '#597D9D';
+$color[6]   = '#CCCCCC';
+$color[7]   = '#333333';
+$color[8]   = '#333333';
+$color[9]   = '#597D9D';
+$color[10]  = '#FFFFFF';
+$color[11]  = '#CCCCCC';
+$color[12]  = '#9DB5CB';
+$color[13]  = '#800000';
+$color[14]  = '#FF0000';
+$color[15]  = '#CCCCCC';
+?>
